<resources>
    <string name="facebook_app_id" translatable="false">230560868185861</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb230560868185861</string>
    <string name="web_client_id" translatable="false">1052592609024-sfut0g1t1hpnvi1vieim3lp96chd0brh.apps.googleusercontent.com</string>
    <string name="ilan_ver">Share Travel</string>
    <string name="ad_soyad">Full Name</string>
    <string name="add_arac_ariyorum">Search Car</string>
    <string name="add">Offer a ride</string>
    <string name="search_trip">Travels</string>
    <string name="search_progress">Searching...</string>
    <string name="uzun">uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string uzun string</string>
    <string name="add_detail_aciklama">Enter description (optional)</string>
    <string name="add_detail_fiyat">Enter price (optional)</string>
    <string name="add_detail_para">Price</string>
    <string name="add_detail_paylas">Share Trip</string>
    <string name="add_detail_sehir_sec">Please Select City</string>
    <string name="add_detail_tarih">Date</string>
    <string name="add_detail_tarih_saat">You can enter a date, price, or description.</string>
    <string name="add_detail_tarih_saat_sec">Select Date (optional)</string>
    <string name="add_direction_title">Choose where and where to go below</string>
    <string name="add_ne_yapmak">What you wanna do ?</string>
    <string name="add_yuk_ariyorum">Search Person</string>
    <string name="ana_sayfaya_don">Thanks I can wait</string>
    <string name="appname">Travel Fried</string>
    <string name="arac">Car</string>
    <string name="baslangic_sehrini_giriniz">Enter the start city ...</string>
    <string name="bitis_sehrini_giriniz">Enter the end city ...</string>
    <string name="chat_activity_mesaj_yaz">Write your message ...</string>
    <string name="contract">By continuing, you agree to the Terms of Use</string>
    <string name="day">day</string>
    <string name="detaya_git">Go Detail</string>
    <string name="devam_et">Go On</string>
    <string name="temizle_city">Clear city</string>
    <string name="dialog_sales_one_cikar">Now find a travel friend</string>
    <string name="duzenle">Edit</string>
    <string name="e_mail">E-mail</string>
    <string name="e_posta">E-mail</string>
    <string name="edittext_hint"><font size="15">Enter price (Optional)</font></string>
    <string name="facebook_ile_giris_yap">Sign in with Facebook</string>
    <string name="facebook_ile_kaydol">Sign up with Facebook</string>
    <string name="filtreyi_temizle">Clear filter</string>
    <string name="fotograf_seciniz">Select Photo</string>
    <string name="giris_yap">Login</string>
    <string name="gonder">Send</string>
    <string name="google_ile_giris_yap">Sign in with Google</string>
    <string name="google_ile_kaydol">Sign up with Google</string>
    <string name="haritada_gor">See on the map</string>
    <string name="help_mesajinizi_giriniz">Enter your message</string>
    <string name="hide_all_city">Hide all cities</string>
    <string name="home">Home Page</string>
    <string name="home_trip_search">Search trip</string>
    <string name="ilan_paylasildi">Travel Shared</string>
    <string name="ilani_one_cikar">I want to take advantage</string>
    <string name="intro_next">Go On</string>
    <string name="intro_start">Start</string>
    <string name="kaydet">Save</string>
    <string name="kaydol">Sign Up</string>
    <string name="mesaj_yaz">Send Message</string>
    <string name="message">Messages</string>
    <string name="bid">Notifications</string>
    <string name="parola">Password</string>
    <string name="profil">Profile</string>
    <string name="sales_info_text_first">We will highlight the ad to find a faster</string>
    <string name="sales_info_text_second_24">we will make a 5-day presentation so you can find</string>
    <string name="sales_info_text_second_3">we will make a 7-day presentation so you can find</string>
    <string name="sales_info_text_second_7">we will make a 10-day presentation so you can find</string>
    <string name="search_home">Find</string>
    <string name="show_all_city">See all cities</string>
    <string name="sikayet_et">Complain</string>
    <string name="sil">Delete</string>
    <string name="skip">Skip</string>
    <string name="tamam">Ok</string>
    <string name="title_add_detail">Detail</string>
    <string name="title_add_direction">Select City</string>
    <string name="title_trip_detail">Detail</string>
    <string name="vazgec">Cancel</string>
    <string name="traveler">traveler</string>
    <string name="temizle">Clear</string>
    <string name="hemen_bul">Move travel up</string>
    <string name="ilan_paylasildi_mesaj">Your Trip Has Been Shared Congratulations
  We want to show you the Trip that we loved you so much :)</string>
    <string name="yolvuluk_silinmistir">Trip deleted</string>
    <string name="telefon_numarasi">Phone number (optional)</string>
    <string name="teklifinizi_giriniz">Enter your offer</string>
    <string name="arac_ara">Search Car</string>
    <string name="yuk_ara">Search Person</string>
    <string name="fiyat_yok">No Price</string>
    <string name="yorum">Can you comment us on google play ?</string>
    <string name="tesekkürler">No thanks</string>
    <string name="tabikide">Of course</string>
    <string name="telefon_numarasi_giriniz">Please enter valid Phone Number</string>
    <string name="telefon_desciption">Would you like to send a phone number so they can reach you?</string>
    <string name="telefon_numaras">Phone number</string>
    <string name="update_title">New features have been added so you can find more trips \\ n  Update the application</string>
    <string name="buton_guncelle">Update</string>
    <string name="buton_vazgec">Skip</string>
    <string name="internet">Check your internet connection!</string>
    <string name="yolculuklarım">My Trips</string>
    <string name="kaydedilen_yolculuklar">Saved Trips</string>
    <string name="hakkimda_yorumlar">Comments About Me</string>
    <string name="kosul_sartlar">Terms and Conditions</string>
    <string name="yardim">Help</string>
    <string name="yardim_profil">Exit</string>
    <string name="iletisime_gec">Contact us</string>
    <string name="gelen_teklif_yok">No incoming offers</string>
    <string name="ilk_ilanı_sen_ver">Come on share travel Trip</string>
    <string name="mesaj_yok">You have no messages</string>
    <string name="yolculugunuz_bulunmaktadir">You have no trip</string>
    <string name="kayitli_yolculugunuz_bulunmaktadir">You have no registered trip.</string>
    <string name="hakkinizda_yorum_bulunmaktadir">There are no comments about.</string>
    <string name="bu_ilan_icin_teklif_yok">No offers for this trip</string>
    <string name="ilan_bulunamadı">No Trip Found</string>
    <string name="ilan_vermek_istermisiniz">Would you like to share trip ?</string>
    <string name="ne_ariyorsun">What are you looking for</string>
    <string name="start_now">Start Now</string>
    <string name="login_register">Login / Register</string>
    <string name="devam">Next</string>
    <string name="tutorial_first">Choose travel  type</string>
    <string name="tutorial_second">Select start and end cities</string>
    <string name="tutorial_thirty">If you haven\'t found a travel, share a travel for the cities you\'re looking for</string>
    <string name="tutorial_fourthy">Chat about the travel</string>
    <string name="tutorial_five">If you want to see the travel you share, make it stand out immediately</string>
    <string name="premium">Premium</string>
    <string name="show">Show</string>
    <string name="premium_text">Do you want everyone to see your journey and want to find a road friend now?</string>
</resources>