<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_find"
        android:icon="@drawable/ic_search"
        android:title="@string/search_home" />

    <item
        android:id="@+id/nav_mytraveler"
        android:icon="@drawable/ic_destination"
        android:title="@string/yolculuklarım" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add_dolu"
        android:title="@string/add" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_email_dolu"
        android:title="@string/message" />

    <item
        android:id="@+id/nav_profil"
        android:icon="@drawable/ic_user_dolu"
        android:title="@string/profil" />


</menu>