<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="roadfriend.app.ui.auth.register.RegisterViewMoel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/tvSkip"
            style="@style/TextViewStyleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:padding="8dp"
            android:text="@string/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/tLFullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llSelectPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_low"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tLFullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_add" />

            <TextView
                style="@style/TextViewStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fotograf_seciniz" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFullName"
            style="@style/AuthEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_low"
            android:hint="@string/ad_soyad"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/AuthEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_low"
            android:hint="@string/e_posta"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etFullName"
            app:layout_constraintStart_toStartOf="@+id/etFullName"
            app:layout_constraintTop_toBottomOf="@+id/etFullName" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/AuthEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_low"
            android:hint="@string/parola"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@style/GreenButtonStyle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/kaydol"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvContract"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContract"
            style="@style/TextViewStyleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/sfprodisplay_medium"
            android:gravity="start"
            android:text="@string/contract"
            app:layout_constraintBottom_toTopOf="@+id/socialContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/socialContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_low"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContract">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:paddingStart="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_low"
                android:paddingEnd="@dimen/margin_normal"
                android:paddingBottom="@dimen/margin_low"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/sfprodisplay_medium"
                android:gravity="center"
                android:text="@string/facebook_ile_kaydol"
                android:textColor="@color/tundura"
                app:layout_constraintEnd_toEndOf="@+id/ivFacebook"
                app:layout_constraintStart_toStartOf="@id/ivFacebook"
                app:layout_constraintTop_toBottomOf="@+id/ivFacebook" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:paddingStart="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_low"
                android:paddingEnd="@dimen/margin_normal"
                android:paddingBottom="@dimen/margin_low"
                app:layout_constraintBottom_toBottomOf="@+id/ivFacebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/ivFacebook"
                app:srcCompat="@drawable/ic_google" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/sfprodisplay_medium"
                android:gravity="center"
                android:text="@string/google_ile_kaydol"
                android:textColor="@color/tundura"
                app:layout_constraintEnd_toEndOf="@id/ivGoogle"
                app:layout_constraintStart_toStartOf="@+id/ivGoogle"
                app:layout_constraintTop_toBottomOf="@+id/ivGoogle" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/button_facebook_native"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:soundEffectsEnabled="false"
                android:visibility="gone" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/BorderGrayButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/giris_yap"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/socialContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>