<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background_simple"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_normal"
    android:paddingBottom="@dimen/margin_normal">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/kedi"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ibm_plex_sans_semi_bold"
        android:gravity="center"
        android:text="@string/yorum"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/custom_border_gray_button"
        android:fontFamily="@font/ibm_plex_sans_semi_bold"
        android:text="@string/tesekkürler"
        android:textAllCaps="false"
        android:textColor="@color/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/custom_green_button"
        android:fontFamily="@font/ibm_plex_sans_semi_bold"
        android:text="@string/tabikide"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnNo"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/btnNo"
        app:layout_constraintTop_toTopOf="@+id/btnNo" />



</androidx.constraintlayout.widget.ConstraintLayout>